--- a/pages/answer/index/index.wxss
+++ b/pages/answer/index/index.wxss
@@ -45,7 +45,7 @@
 }
 
 .answer__swipe-item__ul__li .icon_right {
-  position: inherit !important;
+  position: absolute !important;
   right: 40rpx;
 }
 
@@ -70,7 +70,7 @@
   left: 0;
   right: 0;
   -webkit-box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
-  box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
+          box-shadow: 0px -10px 10px 0px rgba(153, 153, 153, 0.05);
   padding: 30rpx;
   color: #999;
   font-size: 28rpx;
@@ -84,8 +84,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .answer__swipe-item__footer__left text,
