--- a/pages/tabbar/course-ware/index.scss
+++ b/pages/tabbar/course-ware/index.scss
@@ -2,6 +2,31 @@
 .home {
   &__scroll {
     height: calc(100vh - 88rpx);
+    position: relative;
+    &__layer {
+      position: absolute;
+      top: -45px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 999;
+      background-color: rgba(0, 0, 0, 0.5);
+      &__content {
+        background-color: #fff;
+        padding: 25rpx;
+        font-size: 14px;
+        color: #646566;
+        &__block {
+          padding: 20rpx 16rpx;
+          line-height: 50rpx;
+          top: -8rpx;
+          position: relative;
+          &.active {
+            color: $theme-color;
+          }
+        }
+      }
+    }
   }
   &__tab {
     &__active {
@@ -16,8 +41,13 @@
   }
   &__more {
     image {
+      border-left: 2rpx solid #646566;
+      padding-left: 30rpx;
       width: 34rpx;
       height: 34rpx;
+      &.active {
+        border-color: $theme-color;
+      }
     }
   }
 }
