--- a/pages/profile/files/components/profile-header/index/index.scss
+++ b/pages/profile/files/components/profile-header/index/index.scss
@@ -4,6 +4,7 @@
   padding: $padding-md;
   &__info {
     margin-left: $padding-md;
+    flex: 1;
     &__name {
       font-size: 36rpx;
       font-weight: bold;
