--- a/pages/profile/files/components/profile-header/index/index.wxss
+++ b/pages/profile/files/components/profile-header/index/index.wxss
@@ -5,6 +5,9 @@
 
 .profile-header__info {
   margin-left: 30rpx;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .profile-header__info__name {
