--- a/miniprogram_npm/@vant/weapp/tabs/index.wxml
+++ b/miniprogram_npm/@vant/weapp/tabs/index.wxml
@@ -1,3 +1,9 @@
+<!--
+ * @Author: yukang 1172248038@qq.com
+ * @Description: 
+ * @Date: 2021-02-19 12:54:43
+ * @LastEditTime: 2021-03-30 23:41:58
+-->
 <wxs src="../wxs/utils.wxs" module="utils" />
 <wxs src="./index.wxs" module="computed" />
 
@@ -9,7 +15,7 @@
     container="{{ container }}"
     bind:scroll="onTouchScroll"
   >
-    <view class="{{ utils.bem('tabs__wrap', { scrollable }) }} {{ type === 'line' && border ? 'van-hairline--top-bottom' : '' }}">
+    <view class="{{ utils.bem('tabs__wrap', { scrollable }) }} {{ type === 'line' && border ? 'van-hairline--top-bottom' : '' }}" >
       <slot name="nav-left" />
 
       <scroll-view
@@ -18,6 +24,7 @@
         scroll-left="{{ scrollLeft }}"
         class="{{ utils.bem('tabs__scroll', [type]) }}"
         style="{{ color ? 'border-color: ' + color : '' }}"
+        style="{{navRight?'width: 90%':''}}"
       >
         <view class="{{ utils.bem('tabs__nav', [type, { complete: !ellipsis }]) }} nav-class" style="{{ computed.navStyle(color, type) }}">
           <view wx:if="{{ type === 'line' }}" class="van-tabs__line" style="{{ computed.lineStyle({ color, lineOffsetLeft, lineHeight, skipTransition, duration, lineWidth }) }}" />
@@ -41,7 +48,6 @@
           </view>
         </view>
       </scroll-view>
-
       <slot name="nav-right" />
     </view>
   </van-sticky>
