--- a/components/tree/index.wxml
+++ b/components/tree/index.wxml
@@ -1,27 +1,26 @@
 <!--pages/common/comTree/index.wxml-->
-  <view wx:for="{{tree}}" wx:key="index" class="tree">
-    <view class="tree-item tree-item-select">
-      <view class="tree-item-onOff" wx:if="{{item.children && item.children.length > 0}}"  bindtap="isOpen" data-index="{{index}}"> 
-        <image src="/assets/image/u1490.svg" class="{{item.open ? 'tree-item-onOff-open' : 'tree-item-onOff-closed'}}"></image>
-      </view>
-      <view class="tree-item-onOff" wx:else>
-      </view>
-      <view class="tree-item-name {{selectKey == item.id ? 'tree-item-name-select' : '' }}" bindtap="select" data-item="{{item}}" data-index="{{index}}">
-        <view class="name">{{item.name}}</view>
-        <view class="img" wx:if="{{!item.children.length}}">
-          <van-button type="primary" size="mini" wx:if='{{operation&&item.score[0].res==0}}' bind:click='handleClick' data-item="{{item}}">通过</van-button>
-          <van-tag type="success" wx:if='{{item.score[0].res==1}}'>已通过</van-tag>
-          <van-tag type="warning" wx:if='{{!operation&&item.score[0].res==0}}'>未通过</van-tag>
-        </view>
+<view wx:for="{{tree}}" wx:key="index" class="tree">
+  <view class="tree-item tree-item-select" style="padding-left: {{8*item.level}}px;">
+    <view class="tree-item-onOff" wx:if="{{item.children && item.children.length > 0}}" bindtap="isOpen"
+      data-index="{{index}}">
+      <image src="/assets/image/u1490.svg" class="{{item.open ? 'tree-item-onOff-open' : 'tree-item-onOff-closed'}}">
+      </image>
+    </view>
+    <view class="tree-item-onOff" wx:else style="padding-left:8px;">
+    </view>
+    <view class="tree-item-name {{selectKey == item.id ? 'tree-item-name-select' : '' }}" bindtap="select"
+      data-item="{{item}}" data-index="{{index}}">
+      <view class="name">{{item.name}}</view>
+      <view class="img" wx:if="{{!item.children.length}}">
+        <van-button type="primary" size="mini" wx:if='{{operation&&item.score[0].res==0}}' bind:click='handleClick'
+          data-item="{{item}}">通过</van-button>
+        <van-tag type="success" wx:if='{{item.score[0].res==1}}'>已通过</van-tag>
+        <van-tag type="warning" wx:if='{{!operation&&item.score[0].res==0}}'>未通过</van-tag>
       </view>
     </view>
-    <c-tree
-      wx:if="{{item.children && item.children.length > 0 && item.open }}"
-      dataTree='{{ item.children }}'
-      selectKey="{{selectKey}}"
-      isSelectLastNode="{{isSelectLastNode}}"
-      isOpenAll="{{isOpenAll}}"
-      operation='{{operation}}'
-    >
-    </c-tree>
   </view>
+  <c-tree wx:if="{{item.children && item.children.length > 0 && item.open }}" dataTree='{{ item.children }}'
+    selectKey="{{selectKey}}" isSelectLastNode="{{isSelectLastNode}}" isOpenAll="{{isOpenAll}}"
+    operation='{{operation}}'>
+  </c-tree>
+</view>
