--- a/pages/home/detail/index.scss
+++ b/pages/home/detail/index.scss
@@ -1,9 +1,11 @@
 @import "../../../assets/css/variables";
+
 .detail {
   &__header {
     padding: $padding-md;
     font-size: 22rpx;
     color: $text-lighter;
+
     &__txt {
       font-size: 35rpx;
       font-weight: bold;
@@ -11,15 +13,18 @@
       padding-bottom: $padding-md;
     }
   }
+
   &__content {
     padding: $padding-xs;
-    overflow: auto;
   }
+
   &__collect {
     margin-right: 10rpx;
   }
+
   image,
   .van-image {
     vertical-align: middle;
+    height: 100vh;
   }
 }
