--- a/pages/home/detail/index.wxml
+++ b/pages/home/detail/index.wxml
@@ -6,25 +6,18 @@
       <view>{{article.author}}</view>
       <view>{{utils.slice(article.create_time,10)}}</view>
       <view class="u-flex u-col-center" bindtap="handleCollect">
-        <van-icon
-          name="{{collect?'like':'like-o'}}"
-          size="32rpx"
-          custom-class="detail__collect"
-          color="{{collect?'#FF665B':''}}"
-        />收藏
+        <van-icon name="{{collect?'like':'like-o'}}" size="32rpx" custom-class="detail__collect"
+          color="{{collect?'#FF665B':''}}" />收藏
       </view>
     </view>
   </view>
   <view class="detail__content">
-    <van-image
-      width="100%"
-      fit="widthFix"
-      src="{{utils.baseUrl(item.path)}}"
-      wx:for="{{article.articleContent}}"
-      lazy-load
-      use-loading-slot
-    >
-      <van-loading slot="loading" type="spinner" size="20" vertical />
-    </van-image>
+    <block wx:for="{{article.articleContent}}" wx:key="index">
+      <van-image width="100%" fit="widthFix" src="{{utils.baseUrl(item.path)}}"  use-loading-slot
+        wx:show='{{item.type===1}}'>
+        <van-loading slot="loading" type="spinner" size="20" vertical />
+      </van-image>
+      <video wx:if='{{item.type===2}}' src="{{utils.baseUrl(item.path)}}" style="width: 100%;" />
+    </block>
   </view>
 </container>
