--- a/pages/home/detail/index.wxss
+++ b/pages/home/detail/index.wxss
@@ -13,7 +13,6 @@
 
 .detail__content {
   padding: 25rpx;
-  overflow: auto;
 }
 
 .detail__collect {
@@ -23,4 +22,5 @@
 .detail image,
 .detail .van-image {
   vertical-align: middle;
+  height: 100vh;
 }
