--- a/pages/answer/index/index.scss
+++ b/pages/answer/index/index.scss
@@ -1,54 +1,67 @@
 @import "../../../assets/css/variables";
+
 .answer {
   margin-top: $padding-xs;
+
   &__swipe {
     height: calc(100vh - 197rpx);
     overflow: auto;
     width: 100wh;
     margin: $padding-md 0 0;
     position: relative;
+
     swiper-item {
       overflow: auto;
     }
+
     &-item {
       padding: 0 $padding-md $padding-md;
+
       &__checkbox {
         margin-right: 16rpx;
       }
+
       &__total {
         color: #999;
         font-size: $font-size-small;
       }
+
       &__title {
         font-size: $font-size-big;
         padding: $padding-xs 0;
       }
+
       &__ul {
         padding-top: $padding-xs;
+
         &__li {
           background: #f5f5f5;
           border-radius: $border-radius-md;
           padding: $padding-md $padding-xs;
           margin-bottom: 24rpx;
           position: relative;
+
           .icon_right {
             position: absolute !important;
             right: 25rpx;
           }
+
           &.error {
             background: #fff1f2;
             color: #ff665b;
           }
+
           &.success {
             background: #e7fffb;
             color: #1cbc9a;
           }
         }
+
         .btn {
-          width: 150rpx;
           margin-top: 30rpx;
         }
       }
+
       &__footer {
         position: absolute;
         bottom: 0;
@@ -59,18 +72,22 @@
         color: #999;
         font-size: 28rpx;
         background: #fff;
+
         &__left,
         .right,
         .wrong {
           display: flex;
           align-items: center;
+
           text {
             padding-left: 10rpx;
           }
         }
+
         .right {
           color: #1cbc9a;
         }
+
         .wrong {
           margin-left: 40rpx;
           color: #ff665b;
@@ -78,4 +95,7 @@
       }
     }
   }
+.hidden{
+  visibility:hidden
+}
 }
