--- a/pages/answer/index/index.wxml
+++ b/pages/answer/index/index.wxml
@@ -9,127 +9,78 @@
 <van-dialog id="van-dialog" />
 <container>
   <view class="answer">
-    <van-tabs active="{{ active }}" bind:change="handleChange" type="card" color="{{$themeColor}}">
+    <van-tabs active="{{ active }}" bind:change="handleChange" type="card" color="{{$themeColor}}" wx:if="{{isShow}}">
       <van-tab title="答题模式"></van-tab>
-      <van-tab title="背题模式" wx:if="{{params.api!=='getTests'&&params.api!=='getZiCeQues'}}"></van-tab>
+      <van-tab title="背题模式"></van-tab>
     </van-tabs>
 
-    <swiper
-      class="answer__swipe"
-      current="{{swiperCurrent}}"
-      bindanimationfinish="bindanimationfinish"
-      bindchange="handleSwiperChange"
-    >
+    <swiper class="answer__swipe" current="{{swiperCurrent}}" bindanimationfinish="bindanimationfinish"
+      bindchange="handleSwiperChange">
       <swiper-item wx:for="{{list}}" wx:key="id">
         <view class="answer__swipe-item">
           <view class="u-flex u-row-between">
-            <van-tag
-              type="primary"
-              size="medium"
-            >{{item.type===1?'单选':item.type===2?'多选':item.type===3?'判断':''}}</van-tag>
+            <van-tag type="primary" size="medium">{{item.type===1?'单选':item.type===2?'多选':item.type===3?'判断':''}}
+            </van-tag>
             <text class="answer__swipe-item__total">{{index+1}}/{{total}}</text>
           </view>
           <view class="answer__swipe-item__title">{{item.content}}</view>
           <view class="answer__swipe-item__ul">
             <view
               class="answer__swipe-item__ul__li u-flex u-col-center {{active?(it.rig?'success':'error'):item.result !== null&&(item.result&it.value||it.rig||item.type===2)?(it.rig?'success':'error'):''}}"
-              wx:for="{{item.queOptions}}"
-              wx:key="id"
-              wx:for-index="idx"
-              wx:for-item="it"
-              data-i="{{it}}"
-              data-ind="{{index}}"
-              bindtap="handleSelect"
-            >
+              wx:for="{{item.queOptions}}" wx:key="id" wx:for-index="idx" wx:for-item="it" data-i="{{it}}"
+              data-ind="{{index}}" bindtap="handleSelect">
               <view class="u-flex u-col-center" style="max-width: 602rpx;">
-                <van-checkbox
-                  value="{{utils.includes(item.res,it.name)}}"
-                  wx:if="{{item.type===2}}"
-                  checked-color="{{$themeColor}}"
-                  custom-class="answer__swipe-item__checkbox"
-                ></van-checkbox>
-                <van-checkbox
-                  value="{{utils.includes(item.res,it.name)}}"
-                  wx:else
-                  checked-color="{{$themeColor}}"
-                  custom-class="answer__swipe-item__checkbox"
-                ></van-checkbox>
+                <van-checkbox value="{{utils.includes(item.res,it.name)}}" wx:if="{{item.type===2}}"
+                  checked-color="{{$themeColor}}" custom-class="answer__swipe-item__checkbox"></van-checkbox>
+                <van-checkbox value="{{utils.includes(item.res,it.name)}}" wx:else checked-color="{{$themeColor}}"
+                  custom-class="answer__swipe-item__checkbox"></van-checkbox>
                 <!-- {{it.name}} -->
                 {{orderNum[idx]}}
                 {{it.content}}
               </view>
 
-              <van-icon
-                size="35rpx"
-                name="{{it.rig ?'success':'cross'}}"
-                color="{{it.rig ?$themeColor:'#ff665b'}}"
+              <van-icon size="35rpx" name="{{it.rig ?'success':'cross'}}" color="{{it.rig ?$themeColor:'#ff665b'}}"
                 wx:if="{{active||(item.result !== null&&(item.result&it.value||it.rig||item.type===2))}}"
-                custom-class="icon_right"
-              />
+                custom-class="icon_right" />
             </view>
 
             <view
-              class="answer__swipe_btn u-flex {{(swiperCurrent!==(total-1)||swiperCurrent)&&!active||(swiperCurrent!==(total-1)&&swiperCurrent)?'u-row-between':'u-row-center'}}"
-            >
-              <van-button
-                type="primary"
-                custom-class="btn"
-                size="normal"
-                bind:click="handlePrevious"
-                wx:if="{{swiperCurrent}}"
-              >上一题</van-button>
-              <van-button
-                type="primary"
-                custom-class="btn"
-                size="normal"
-                data-ind="{{index}}"
-                bind:click="handleMultipleChoice"
-                disabled="{{item.result!==null}}"
-                wx:if="{{!active}}"
-              >完成</van-button>
-              <van-button
-                type="primary"
-                custom-class="btn"
-                size="normal"
-                wx:if="{{swiperCurrent!==(total-1)}}"
-                bind:click="handleNext"
-              >下一题</van-button>
+              class="answer__swipe_btn u-flex {{(swiperCurrent!==(total-1)||swiperCurrent)&&!active||(swiperCurrent!==(total-1)&&swiperCurrent)?(swiperCurrent!==0?'u-row-between':'u-row-center'):'u-row-center'}} {{isShow?'u-row-between':''}}">
+              <van-button type="primary" custom-class="btn" size="normal" bind:click="handlePrevious"
+                wx:if="{{swiperCurrent}}">上一题</van-button>
+              <van-button type="primary" custom-class="btn" size="normal" data-ind="{{index}}"
+                bind:click="handleMultipleChoice" disabled="{{item.result!==null}}" wx:if="{{isShow}}">完成</van-button>
+
+              <van-button wx:elif="{{swiperCurrent===(total-1)}}" type="primary" custom-class="btn" size="normal"
+                data-ind="{{index}}" bind:click="handleMultipleChoice" disabled="{{item.result!==null}}">
+                提交</van-button>
+
+              <van-button type="primary" custom-class="btn" size="normal" wx:if="{{swiperCurrent!==(total-1)}}"
+                data-ind="{{index}}" bind:click="{{isShow?'handleNext':'handleMultipleChoice'}}">下一题</van-button>
             </view>
           </view>
         </view>
       </swiper-item>
     </swiper>
-    <view class="answer__swipe-item__footer u-flex u-row-between">
-      <view
-        class="answer__swipe-item__footer__left"
-        bindtap="handleCollect"
-        data-i="{{swiperCurrent+'_'+list[swiperCurrent].id}}"
-      >
-        <van-icon
-          name="{{list[swiperCurrent].collect?'like':'like-o'}}"
-          size="36rpx"
-          color="{{list[swiperCurrent].collect?'#ff665b':''}}"
-        />
+    <view class="answer__swipe-item__footer u-flex {{!isShow?'u-row-center':'u-row-between'}}">
+      <view class="answer__swipe-item__footer__left" bindtap="handleCollect"
+        data-i="{{swiperCurrent+'_'+list[swiperCurrent].id}}" wx:if='{{isShow}}'>
+        <van-icon name="{{list[swiperCurrent].collect?'like':'like-o'}}" size="36rpx"
+          color="{{list[swiperCurrent].collect?'#ff665b':''}}" />
         <text>收藏</text>
       </view>
-      <van-count-down
-        class="control-count-down"
-        time="{{ time }}"
-        bind:finish="timeFinish"
-        slot="title"
-        wx:if="{{time}}"
-        use-slot
-        bind:change="timeChange"
-        format="HH:mm:ss:SSS"
-      >{{ utils.zeroFill(timeData.hours) }}:{{ utils.zeroFill(timeData.minutes) }}:{{ utils.zeroFill(timeData.seconds) }}</van-count-down>
-      <view class="answer__swipe-item__footer__right u-flex u-row-between">
-        <view class="right">
+      <van-count-down class="control-count-down" time="{{ time }}" bind:finish="timeFinish" slot="title"
+        wx:if="{{time}}" use-slot bind:change="timeChange" format="HH:mm:ss:SSS">
+        {{ utils.zeroFill(timeData.hours) }}:{{ utils.zeroFill(timeData.minutes) }}:{{ utils.zeroFill(timeData.seconds) }}
+      </van-count-down>
+      <view class="answer__swipe-item__footer__right u-flex u-row-between" style="position: absolute;right: 12px;">
+        <view class=" right">
           <van-icon name="checked" size="36rpx" />
-          <text>{{list[swiperCurrent].right_count}}</text>
+          <text>{{right_count}}</text>
         </view>
         <view class="wrong">
           <van-icon name="clear" size="36rpx" />
-          <text>{{list[swiperCurrent].wrong_count}}</text>
+          <text>{{wrong_count}}</text>
         </view>
       </view>
     </view>
